--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,35 +17,26 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
 
 </head>
-<body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
+<body class="{% if layout.post_class %}{{layout.post_class}}{% else %}home-template{% endif %} nav-closed">
+    {%if site.navigation %}
+    {% include navigation.html %}
+    {% endif %}
 
-    {{ content }}
-    <footer class="site-footer clearfix">
-      <section class="copyright">
-        <a href="{{ site.baseurl }}">{{ site.name }}</a>
-      </section>
-      <section class="poweredby">Made with Jekyll using
-        <a href="http://github.com/rosario/kasper">Kasper theme</a>
-      </section>
-    </footer>
+    <div class="site-wrapper">
 
-    <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
+      {{ content }}
+      <footer class="site-footer clearfix">
+        <section class="copyright">
+          <a href="{{ site.baseurl }}">{{ site.name }}</a>
+        </section>
+        <section class="poweredby">Made with Jekyll using
+          <a href="http://github.com/rosario/kasper">Kasper theme</a>
+        </section>
+      </footer>
+
+    </div>
+    <script type="text/javascript" src="/assets/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="/assets/js/jquery.fitvids.js"></script>
     <script type="text/javascript" src="/assets/js/index.js"></script>
-
-    <!-- Google Analytics Tracking code -->
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', '{{ site.google_analytics }}']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
 </body>
 </html>
