--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ post_class: post-template
     <article class="post page">
 
         <header class="post-header">
-            <h1 class="post-title">{{ page.title }}</h1>
+            <h1 class="post-title">{{ page.post_title }}</h1>
             <section class="post-meta">
                 <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
                 {% if page.categories.size > 0 %}
