--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,7 @@ cover: false
     <article class="post page">
 
         <header class="post-header">
-            <h1 class="post-title">{{page.title}}</h1>
+            <h1 class="post-title">{{page.post_title}}</h1>
         </header>
 
         <section class="post-content">
